--- a/final/a.html
+++ b/final/a.html
@@ -21,11 +21,11 @@
 
         form * {
             display: block;
+            display: inline-block;
         }
 
         form input {
-            display: inline-block;
-            margin-left: 20px;
+            margin-left: 0px;
         }
 
         label,
@@ -61,20 +61,22 @@
         // 创建 WebSocket 客户端
         var ws = new WebSocket('ws://localhost:8080');
 
-        var radios = document.getElementsByName("class");
         ws.onopen = function (event) {
             console.log("WebSocket opened.");
         };
 
         function sendMessage() {
             var query = document.getElementById("query").value;
-            var type;
-            for (var i = 0; i < radios.length; i++) {
-                if (radios[i].checked) {
-                    type = radios[i].value;
-                }
+            var type = "none_type";
+            if (query.length === 0) {
+                query = "none_query";
+                alert("请输入查询!");
+                return;
             }
-            ws.send(query+'/'+type);
+            var type = document.getElementById("type").value === "" ? "none_type" : document.getElementById("type").value;
+            var dayy = document.getElementById("dayy").value === "" ? -1 : document.getElementById("dayy").value;
+            var dept = document.getElementById("dept").value === "" ? "none_dept" : document.getElementById("dept").value;
+            ws.send(query + '/' + type + '/' + dayy + '/' + dept);
         }
 
         ws.onmessage = function (event) {
@@ -90,18 +92,18 @@
             var size = Object.keys(data).length - 1;
             if (size === 0) {
                 res_exist.innerHTML = '找不到相关的内容或信息';
+                time_taken.innerHTML = '用时: ' + data.slice(-1)[0].time_taken / 1000.0 + ' s'
                 return;
             }
             var row = document.createElement('tr');
-            row.innerHTML = '<td style="text-align: center;">搜索结果</td><td>得分</td>';
+            row.innerHTML = '<td style="text-align: center;">日期</td><td style="text-align: center;">搜索结果 用时: ' + data.slice(-1)[0].time_taken / 1000.0 + ' s</td><td>得分</td>';
             table.appendChild(row);
             data.slice(0, size).forEach(function (item) {
                 row = document.createElement('tr');
-                row.innerHTML = '<td><a href="https://www1.szu.edu.cn/board/view.asp?id=' + item.docid + '" target="_blank">' + item.title
-                    + '</a></td><td>' + item.similarity.toFixed(2) + '</td>';
+                row.innerHTML = '<td>'+item.date+'</td><td><a href="https://www1.szu.edu.cn/board/view.asp?id=' + item.docid + '" target="_blank">' + item.title
+                    + '</a></td><td>'+ item.similarity.toFixed(2) + '</td>';
                 table.appendChild(row);
             });
-            time_taken.innerHTML = '用时: ' + data.slice(-1)[0].time_taken / 1000.0 + ' s'
         };
     </script>
 </head>
@@ -111,30 +113,128 @@
         <label for="query">Gouba</label>
         <input type="text" id="query" size="40" style="font-size: 32px;"
             onkeydown="if(event.keyCode==13) sendMessage()">
+        <input type="submit" style="font-size: 32px;" value="search" name="searchb1" onclick="sendMessage()">
         <form>
-            <input type="radio" id="jw" name="class" value="jw" onclick="sendMessage()">
-            <label for="jw">教务</label>
-
-            <input type="radio" id="ky" name="class" value="ky" onclick="sendMessage()">
-            <label for="ky">科研</label>
-
-            <input type="radio" id="xz" name="class" value="xz" onclick="sendMessage()">
-            <label for="xz">行政</label>
-
-            <input type="radio" id="xg" name="class" value="xg" onclick="sendMessage()">
-            <label for="xg">学工</label>
-
-            <input type="radio" id="sh" name="class" value="sh" onclick="sendMessage()">
-            <label for="sh">生活</label>
-
-            <input type="radio" id="jz" name="class" value="jz" onclick="sendMessage()">
-            <label for="jz">讲座</label>
+            <select name="type" id="type" style="width:120px; font-size: 32px;">
+                <option value="">分类</option>
+                <option value="教务">教务</option>
+                <option value="科研">科研</option>
+                <option value="行政">行政</option>
+                <option value="学工">学工</option>
+                <option value="生活">生活</option>
+                <option value="讲座">讲座</option>
+            </select>
+            <select name="dayy" id="dayy" style="width:150px; font-size: 32px;">
+                <option value="">时间</option>
+                <option value="1">今天</option>
+                <option value="7">一周内</option>
+                <option value="30">30天内</option>
+                <option value="2023">2023年</option>
+                <option value="2022">2022年</option>
+                <option value="2021">2021年</option>
+                <option value="2020">2020年</option>
+                <option value="2019">2019年</option>
+                <option value="2018">2018年</option>
+                <option value="2017">2017年</option>
+                <option value="2016">2016年</option>
+                <option value="2015">2015年</option>
+                <option value="2014">2014年</option>
+            </select>
+            <select name="dept" id="dept" style="width:300px; font-size: 32px;">
+                <option value="">全部发文单位</option>
+                <option value="党政办公室">1.党政办公室</option>
+                <option value="组织部">2.组织部</option>
+                <option value="统战部">3.统战部</option>
+                <option value="宣传部">4.宣传部</option>
+                <option value="纪检（监察）室">5.纪检（监察）室</option>
+                <option value="校工会">6.校工会</option>
+                <option value="妇女委员会">7.妇女委员会</option>
+                <option value="校团委">8.校团委</option>
+                <option value="教务部">9.教务部</option>
+                <option value="招生办公室">10.招生办公室</option>
+                <option value="创新创业教育中心">11.创新创业教育中心</option>
+                <option value="研究生院">12.研究生院</option>
+                <option value="党委研工部">13.党委研工部</option>
+                <option value="发展规划部">14.发展规划部</option>
+                <option value="社会科学部">15.社会科学部</option>
+                <option value="学报社科版">16.学报社科版</option>
+                <option value="科学技术部">17.科学技术部</option>
+                <option value="学报理工版">18.学报理工版</option>
+                <option value="学生部">19.学生部</option>
+                <option value="党委学工部">20.党委学工部</option>
+                <option value="国际交流与合作部">21.国际交流与合作部</option>
+                <option value="人力资源部">22.人力资源部</option>
+                <option value="党委教师工作部">23.党委教师工作部</option>
+                <option value="计划财务部">24.计划财务部</option>
+                <option value="招投标管理中心">25.招投标管理中心</option>
+                <option value="实验室与国有资产管理部">26.实验室与国有资产管理部</option>
+                <option value="审计室">27.审计室</option>
+                <option value="后勤保障部">28.后勤保障部</option>
+                <option value="后勤保障部党委">29.后勤保障部党委</option>
+                <option value="安全保卫部">30.安全保卫部</option>
+                <option value="离退休办公室">31.离退休办公室</option>
+                <option value="校友联络部">32.校友联络部</option>
+                <option value="教育发展基金会">33.教育发展基金会</option>
+                <option value="机关党委">34.机关党委</option>
+                <option value="丽湖校区管理办公室">35.丽湖校区管理办公室</option>
+                <option value="教育学部">36.教育学部</option>
+                <option value="艺术学部">37.艺术学部</option>
+                <option value="医学部">38.医学部</option>
+                <option value="马克思主义学院">39.马克思主义学院</option>
+                <option value="经济学院">40.经济学院</option>
+                <option value="法学院">41.法学院</option>
+                <option value="心理学院">42.心理学院</option>
+                <option value="体育学院">43.体育学院</option>
+                <option value="人文学院">44.人文学院</option>
+                <option value="外国语学院">45.外国语学院</option>
+                <option value="传播学院">46.传播学院</option>
+                <option value="数学与统计学院">47.数学与统计学院</option>
+                <option value="物理与光电工程学院">48.物理与光电工程学院</option>
+                <option value="化学与环境工程学院">49.化学与环境工程学院</option>
+                <option value="生命与海洋科学学院">50.生命与海洋科学学院</option>
+                <option value="机电与控制工程学院">51.机电与控制工程学院</option>
+                <option value="材料学院">52.材料学院</option>
+                <option value="电子与信息工程学院">53.电子与信息工程学院</option>
+                <option value="计算机与软件学院">54.计算机与软件学院</option>
+                <option value="建筑与城市规划学院">55.建筑与城市规划学院</option>
+                <option value="土木与交通工程学院">56.土木与交通工程学院</option>
+                <option value="管理学院">57.管理学院</option>
+                <option value="政府管理学院">58.政府管理学院</option>
+                <option value="高等研究院">59.高等研究院</option>
+                <option value="金融科技学院">60.金融科技学院</option>
+                <option value="国际交流学院">61.国际交流学院</option>
+                <option value="继续教育学院">62.继续教育学院</option>
+                <option value="图书馆">63.图书馆</option>
+                <option value="图书馆党总支">64.图书馆党总支</option>
+                <option value="档案馆">65.档案馆</option>
+                <option value="信息中心">66.信息中心</option>
+                <option value="信息中心党总支">67.信息中心党总支</option>
+                <option value="资产经营公司">68.资产经营公司</option>
+                <option value="技术转化中心">69.技术转化中心</option>
+                <option value="深大总医院">70.深大总医院</option>
+                <option value="深大附属华南医院">71.深大附属华南医院</option>
+                <option value="校医院">72.校医院</option>
+                <option value="附属教育集团">73.附属教育集团</option>
+                <option value="深大附属中学">74.深大附属中学</option>
+                <option value="深大附属实验中学">75.深大附属实验中学</option>
+                <option value="中国经济特区研究中心">76.中国经济特区研究中心</option>
+                <option value="港澳基本法研究中心">77.港澳基本法研究中心</option>
+                <option value="文化产业研究院">78.文化产业研究院</option>
+                <option value="美学与文艺批评研究院">79.美学与文艺批评研究院</option>
+                <option value="饶宗颐文化研究院">80.饶宗颐文化研究院</option>
+                <option value="中国海外利益研究院">81.中国海外利益研究院</option>
+                <option value="微纳光电子学研究院">82.微纳光电子学研究院</option>
+                <option value="创新技术研究院">83.创新技术研究院</option>
+                <option value="大数据系统计算技术国家工程实验室">84.大数据系统计算技术国家工程实验室</option>
+                <option value="心理健康教育与咨询中心">85.心理健康教育与咨询中心</option>
+                <option value="人工智能与数字经济广东省实验室（深圳）">86.人工智能与数字经济广东省实验室（深圳）</option>
+                <option value="深圳香蜜湖国际金融科技研究院">87.深圳香蜜湖国际金融科技研究院</option>
+            </select>
         </form>
-
         <div id="res">
             <p id="res_exist"></p>
-            <table id="data-table"></table>
             <p id="time_taken"></p>
+            <table id="data-table"></table>
         </div>
     </div>
 </body>
